Improved the look using <fieldset> tag

--- a/resume.html
+++ b/resume.html
@@ -16,8 +16,9 @@
     </head>
 
     <body>
-        <h1>Aachal's Profile</h1>
-        <h4>Click to <a href="./Docs/profile.pdf">Download</a> the Resume</h4>
+        <fieldset>
+            <h1>Aachal's Profile</h1>
+        <h4>Click to <a href="./Docs/profile.pdf" download="">Download</a> the Resume</h4>
         <h3>xyz04@gmail.com</h3>
         <h3>Mobile N0 : +91855099966</h3>
         <hr>
@@ -68,27 +69,34 @@
             <li>Operating System: Linux, Windows</li>
         </ul>
 
-        <h2><u>Academic Projects:-</u></h2>
-        <ul> 
-            <li>Virtual Personal Desktop Assistant</li>
+        <fieldset>
+            <legend><h2><u>Academic Projects :</u></h2></legend>
+            
+        <ul>
+            <li><h4><a href="https://github.com/aachalvartak/confusionR.git">Restaurant's Website Using React</a></h4>
+                <p>Implemented Customized Website for a Restaurant for smooth navigation and ease of use. Animations are added for better visual experience and forms for ensuring better interactivity with customers.
+                </p>
+            </li> 
+            <li><h4><a href="https://github.com/aachalvartak/Virtual_Personal_Desktop_Assistant.git">Virtual Personal Desktop Assistant</a></h4></li>
                 <p>Virtual Personal Desktop Assistant (VPDA) provides assistance for desktop users. It basically performs all
                     the tasks that we usually perform on our desktop. The VPDA can be operated in three modes (Text, Voice
                     or Remote) as per user's choice. Remote mode and easy addition of commands are the things that make
                     VPDA different from others.
                     Language: Python
                 </p>
-            <li>Operating System: Linux, Windows</li>
+            <li><h4><a href="https://github.com/aachalvartak/Phone_Book-using-Tkinter.git">Phone Book Using Tkinter</a></h4></li>
                     <p>Designed a simple phone book wherein you can perform CRUD (Create, Read, Update, Delete) operations as
                         well as store the contacts. Also you can search the contacts by name. Fields included are Name, Telephone,
                         Email address and a search field.
                         Language: Python
                     </p>
-            <li>Tracking Student’s Detail</li>
+            <li><h4></h4><a href="https://github.com/aachalvartak/Tracking_Student_Details.git">Tracking Student’s Detail</a></h4></li>
                     <p>A simple yet efficient C program for tracking student's detail. It offers features of Adding, Deleting, Searching
                         student's record. Features also include listing of record according to name, year of admission and branch
                         such that user can search for student's detail as per his/her convenience.
                         Language: C</p>
         </ul>
+        </fieldset>
 
         <h2><u>Workshop , Training & Seminars :-</u></h2>
         <ul>
@@ -107,7 +115,7 @@
             <li>Worked for National Level Intercollegiate Technical Event, responsible for Certification Team Coordinator.</li>
         </ul>
 
-        <h2><u>EXTRA-CURRICULAR ACTIVITIES:-</u></h2>
+        <h2><u>Extra-Curricular Activities:-</u></h2>
         <ul>
             <li>Actively participated in VCET HACKATHON ‘18’.</li>
             <li>Actively participated in Design Thinking Workshop conducted by Pearl Academy.</li>
@@ -124,6 +132,6 @@
             <li>Patience</li>
             <li>Creativity</li>
         </ul>
-
+        </fieldset>
     </body>
 </html>
